--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-dom": "^18.3.0",
     "@supabase/supabase-js": "^2.39.0",
     "@supabase/ssr": "^0.1.0",
-    "lucide-react": "^0.index.jsindex.js",
+    "lucide-react": "^0.294.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.0"
